fix styles: re-adjustments in alignment and add word-break

--- a/packages/components/src/components/navigation/sidebar/sidebar-item.scss
+++ b/packages/components/src/components/navigation/sidebar/sidebar-item.scss
@@ -60,7 +60,7 @@
 .sidebar__nav-item {
   display: flex;
   flex-direction: var(--ifx-sidebar-item-flex-direction, row);
-  align-items: flex-start;
+  align-items: center;
   width: 100%;
   padding: 8px 0px;
   gap: 4px;
